--- a/trainings/20230903/20230903_gsd_adaptive.qmd
+++ b/trainings/20230903/20230903_gsd_adaptive.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact"
 date: 2023-09-03
+date-modified: last-modified
 format:
   html:
     toc: true
