--- a/events_upcoming.qmd
+++ b/events_upcoming.qmd
@@ -23,23 +23,27 @@ knitr::opts_chunk$set(echo = TRUE)
 path <- getwd()
 upcoming <- as.data.frame(read_excel(paste(path, "/data/upcoming.xlsx", sep = ""), col_types = NULL))
 
-# prepare date strings
-dates <- unique(select(upcoming, date))[, 1]
-d <- substr(dates, 1, 2)
-m <- substr(dates, 4, 5)
-y <- substr(dates, 7, 11)
+if (nrow(upcoming) > 0){
+  # prepare date strings
+  dates <- unique(select(upcoming, date))[, 1]
+  d <- substr(dates, 1, 2)
+  m <- substr(dates, 4, 5)
+  y <- substr(dates, 7, 11)
 
-rdate <- paste(y, m, d, sep = "")
+  rdate <- paste(y, m, d, sep = "")
 
-upcoming$Registration <- ifelse(is.na(select(upcoming, registration)[, 1]), "", paste("[Registration](", select(upcoming, registration)[, 1], ")", sep = ""))
-upcoming$Agenda <- paste("[Agenda](upcoming/", rdate, "/agenda.pdf)", sep = "")
-upcoming[upcoming$date == "03.09.2023", "Agenda"] <- "[Agenda](https://cen2023.github.io/home/)"
+  upcoming$Registration <- ifelse(is.na(select(upcoming, registration)[, 1]), "", 
+                                  paste("[Registration](", select(upcoming, registration)[, 1], ")", sep = ""))
+  upcoming$Agenda <- paste("[Agenda](upcoming/", rdate, "/agenda.pdf)", sep = "")
+  upcoming[upcoming$date == "03.09.2023", "Agenda"] <- "[Agenda](https://cen2023.github.io/home/)"
 
-upcoming[is.na(upcoming)] <- ""
+  upcoming[is.na(upcoming)] <- ""
 
-upcoming <- select(upcoming, date, event, type, Agenda, Registration, comment) %>% rename("Date" = date, "Event" = event, "Type of event" = type, "Comment" = comment)
+  upcoming <- select(upcoming, date, event, type, Agenda, Registration, comment) %>% rename("Date" = date, "Event" = event, "Type of event" = type, 
+                                                                                            "Comment" = comment)
+}
 ```
 
 ```{r, include=TRUE, echo=FALSE}
-kable(upcoming)
+if (nrow(upcoming) > 0){kable(upcoming)} else {kable("No upcoming events announced yet. Check back later!", col.names = "")}
 ```
