--- a/updates.qmd
+++ b/updates.qmd
@@ -10,44 +10,44 @@ output:
     toc_float: yes
 ---
 
-* 2023/12/07: Uploaded slides for [Next Generation BBS Training Day](https://baselbiometrics.github.io/home/docs/trainings_past.html#next-generation-bbs-training-day).
-* 2023/11/06: Uploaded slides and recordings for [BBS Annual Meeting: Federated learning and new data modalities](https://baselbiometrics.github.io/home/docs/events_past.html#federated-learning-and-new-data-modalities).
-* 2023/11/01: Added registration link for [Next Generation BBS Training Day](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
-* 2023/10/13: Added slidedecks to webinar [Pre-approval and Post-approval Challenges in the Clinical Development and Reimbursement of CAR-T Cell Therapies](https://baselbiometrics.github.io/home/docs/events_past.html#pre-approval-and-post-approval-challenges-in-the-clinical-development-and-reimbursement-of-car-t-cell-therapies). Uploaded final agenda/announcement for [BBS Annual Meeting: Federated learning and new data modalities](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
-* 2023/10/10: Uploaded agenda/first announcement for [Next Generation BBS Training Day](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
-* 2023/09/28: Uploaded final agenda for webinar [Pre-approval and Post-approval Challenges in the Clinical Development and Reimbursement of CAR-T Cell Therapies](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
-* 2023/09/03: Uploaded link to materials of [Advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact](https://baselbiometrics.github.io/home/docs/trainings/20230903/20230903_gsd_adaptive.html).
-* 2023/08/31: Uploaded 2nd announcement for webinar [Pre-approval and Post-approval Challenges in the Clinical Development and Reimbursement of CAR-T Cell Therapies](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
-* 2023/08/08: Added first announcement for [BBS Annual Meeting: Federated learning and new data modalities](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
-* 2023/07/21: Added further slidedecks to [NextGen seminar](https://baselbiometrics.github.io/home/docs/events_past.html#next-generation-event-on-soft-skills-professional-development-and-networking).
-* 2023/07/05: Uploaded 1st announcement and registration link for (free) webinar [Pre-approval and Post-approval Challenges in the Clinical Development and Reimbursement of CAR-T Cell Therapies](https://baselbiometrics.github.io/home/docs/events_upcoming.html). Added Kaspar Rufibach's slidedeck to [NextGen seminar](https://baselbiometrics.github.io/home/docs/events_past.html#next-generation-event-on-soft-skills-professional-development-and-networking).
-* 2023/05/23: Uploaded agenda and registration link for workshop [Estimands in Early Development (ED) across Therapeutic Areas](https://baselbiometrics.github.io/home/docs/events_past.html#next-generation-event-on-soft-skills-professional-development-and-networking).
-* 2023/05/02: Uploaded agenda and registration link for seminar [Next Generation event on soft-skills, professional development, and networking](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
+* 2023/12/07: Uploaded slides for [Next Generation BBS Training Day](trainings_past.html#next-generation-bbs-training-day).
+* 2023/11/06: Uploaded slides and recordings for [BBS Annual Meeting: Federated learning and new data modalities](events_past.html#federated-learning-and-new-data-modalities).
+* 2023/11/01: Added registration link for [Next Generation BBS Training Day](events_upcoming.html).
+* 2023/10/13: Added slidedecks to webinar [Pre-approval and Post-approval Challenges in the Clinical Development and Reimbursement of CAR-T Cell Therapies](events_past.html#pre-approval-and-post-approval-challenges-in-the-clinical-development-and-reimbursement-of-car-t-cell-therapies). Uploaded final agenda/announcement for [BBS Annual Meeting: Federated learning and new data modalities](events_upcoming.html).
+* 2023/10/10: Uploaded agenda/first announcement for [Next Generation BBS Training Day](events_upcoming.html).
+* 2023/09/28: Uploaded final agenda for webinar [Pre-approval and Post-approval Challenges in the Clinical Development and Reimbursement of CAR-T Cell Therapies](events_upcoming.html).
+* 2023/09/03: Uploaded link to materials of [Advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact](trainings/20230903/20230903_gsd_adaptive.html).
+* 2023/08/31: Uploaded 2nd announcement for webinar [Pre-approval and Post-approval Challenges in the Clinical Development and Reimbursement of CAR-T Cell Therapies](events_upcoming.html).
+* 2023/08/08: Added first announcement for [BBS Annual Meeting: Federated learning and new data modalities](events_upcoming.html).
+* 2023/07/21: Added further slidedecks to [NextGen seminar](events_past.html#next-generation-event-on-soft-skills-professional-development-and-networking).
+* 2023/07/05: Uploaded 1st announcement and registration link for (free) webinar [Pre-approval and Post-approval Challenges in the Clinical Development and Reimbursement of CAR-T Cell Therapies](events_upcoming.html). Added Kaspar Rufibach's slidedeck to [NextGen seminar](events_past.html#next-generation-event-on-soft-skills-professional-development-and-networking).
+* 2023/05/23: Uploaded agenda and registration link for workshop [Estimands in Early Development (ED) across Therapeutic Areas](events_past.html#next-generation-event-on-soft-skills-professional-development-and-networking).
+* 2023/05/02: Uploaded agenda and registration link for seminar [Next Generation event on soft-skills, professional development, and networking](events_upcoming.html).
 * 2023/04/13: Uploaded slides and recordings for [BBS seminar "Quantification of risk: ask the right questions or time to apply the estimand framework to safety!"](events_past.html#quantification-of-risk-ask-the-right-questions-or-time-to-apply-the-estimand-framework-to-safety).
 * 2023/03/21: Uploaded slides and added time stamps to recording for [Joint BES / BBS seminar "Real-World Data Quality – Assessing data quality and demonstrating fitness-for-purpose"](events_past.html#joint-besbbs-webinar-real-world-data-quality).
 * 2023/03/15: Uploaded link to recording for [Joint BES / BBS seminar "Real-World Data Quality – Assessing data quality and demonstrating fitness-for-purpose"](events_past.html#joint-besbbs-webinar-real-world-data-quality).
-* 2023/03/08: First announcement of seminar [Next Generation event on soft-skills, professional development, and networking](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
-* 2023/10/02: Added announcement of seminar [Joint BES / BBS seminar "Real-World Data Quality – Assessing data quality and demonstrating fitness-for-purpose"](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
+* 2023/03/08: First announcement of seminar [Next Generation event on soft-skills, professional development, and networking](events_upcoming.html).
+* 2023/10/02: Added announcement of seminar [Joint BES / BBS seminar "Real-World Data Quality – Assessing data quality and demonstrating fitness-for-purpose"](events_upcoming.html).
 * 2023/10/02: Added materials of an amazing training [Good Software Engineering
 Practice for R Packages](https://kkmann.github.io/workshop-r-swe/).
-* 2023/01/17: Added announcement of workshop [Adaptive Designs and Multiple Testing Procedures Workshop](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
-* 2023/01/09: Added announcement of seminar [Quantification of risk: ask the right questions or time to apply the estimand framework to safety!](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
+* 2023/01/17: Added announcement of workshop [Adaptive Designs and Multiple Testing Procedures Workshop](events_upcoming.html).
+* 2023/01/09: Added announcement of seminar [Quantification of risk: ask the right questions or time to apply the estimand framework to safety!](events_upcoming.html).
 * 2022/12/16: Added recording and slide decks of [joint EFSPI & BBS virtual event on "Addressing intercurrent events: Treatment policy and hypothetical strategies (Day 2)"](events_past.html#joint-efspi-bbs-virtual-event---addressing-intercurrent-events-treatment-policy-and-hypothetical-strategies-day-2).
-* 2022/12/14: Added recording of [Next Generation Networking Seminar](https://baselbiometrics.github.io/home/docs/events_past.html#next-generation-networking-seminar).
+* 2022/12/14: Added recording of [Next Generation Networking Seminar](events_past.html#next-generation-networking-seminar).
 * 2022/12/09: Added recording and slide decks of [joint EFSPI & BBS virtual event on "Addressing intercurrent events: Treatment policy and hypothetical strategies (Day 1)"](events_past.html#joint-efspi-bbs-virtual-event---addressing-intercurrent-events-treatment-policy-and-hypothetical-strategies-day-1).
 * 2022/11/25: Moved this page to [quarto](https://quarto.org/) implying a slightly different look.
 * 2022/09/19: Added final version of material of BBS course [Advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact](trainings/20220913/20220913_gsd_adaptive.html).
-* 2022/07/20: Added recording and slide decks of seminar ["On market approval and market access: Breaking the linear thinking or how to innovate in a crowded space?"](https://baselbiometrics.github.io/home/docs/events_past.html#15072022:_On_market_approval_and_market_access:_Breaking_the_linear_thinking_or_how_to_innovate_in_a_crowded_space).
+* 2022/07/20: Added recording and slide decks of seminar ["On market approval and market access: Breaking the linear thinking or how to innovate in a crowded space?"](events_past.html#15072022:_On_market_approval_and_market_access:_Breaking_the_linear_thinking_or_how_to_innovate_in_a_crowded_space).
 * 2022/07/01: Added recording, slide decks of [seminar on "Registry studies and health technology assessment (HTA)"](events_past.html#23062022:_BBS__EFSPI_Seminar_Registry_studies_and_HTA).
 * 2022/06/15: Added 1st announcement of [seminar on "On market approval and market access: Breaking the linear thinking or how to innovate in a crowded space?"](events_upcoming.html).
-* 2022/05/31: Added recording, slidedeck of [transforming drug development and BBS assembly](https://baselbiometrics.github.io/home/docs/events_past.html#24052022:_BBS_Spring_Seminar_Transforming_drug_development_and_Assembly).
+* 2022/05/31: Added recording, slidedeck of [transforming drug development and BBS assembly](events_past.html#24052022:_BBS_Spring_Seminar_Transforming_drug_development_and_Assembly).
 * 2022/05/21: Added 2nd announcement of [seminar on "Registry studies and HTA"](events_upcoming.html).
 * 2022/05/13: Location has changed for [spring seminar on "Transforming drug development" and bi-yearly BBS assembly](events_upcoming.html). Note, the new location is: Novartis Campus, Auditorium 510_U1
 * 2022/04/20: Training on advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact is FULLY BOOKED.
 * 2022/04/11: Added announcement of [spring seminar on "Transforming drug development"](events_upcoming.html).
-* 2022/03/30: Added recording, slidedeck of [graphical approaches to multiple test problems training](https://baselbiometrics.github.io/home/docs/trainings_past.html#29032022:_Graphical_approaches_to_multiple_test_problems).
+* 2022/03/30: Added recording, slidedeck of [graphical approaches to multiple test problems training](trainings_past.html#29032022:_Graphical_approaches_to_multiple_test_problems).
 * 2022/03/21: Added announcement of [seminar on "Registry studies and health technology assessment (HTA)"](events_upcoming.html).
-* 2022/03/15: Added recording, slidedeck, exercises (incl. dataset) of [machine learning training](https://baselbiometrics.github.io/home/docs/trainings_past.html#21022022:_Machine_Learning_in_clinical_drug_development).
+* 2022/03/15: Added recording, slidedeck, exercises (incl. dataset) of [machine learning training](trainings_past.html#21022022:_Machine_Learning_in_clinical_drug_development).
 * 2022/02/28: Added new version of [statutes](data/BBS_Statutes.pdf) with minor updates.
 
 
