--- a/updates.qmd
+++ b/updates.qmd
@@ -10,6 +10,7 @@ output:
     toc_float: yes
 ---
 
+* 2023/12/20: Uploaded first announcement for [BBS Training: Causal thinking in clinical trials](events_upcoming.html).
 * 2023/12/07: Uploaded slides for [Next Generation BBS Training Day](trainings_past.html#next-generation-bbs-training-day).
 * 2023/11/06: Uploaded slides and recordings for [BBS Annual Meeting: Federated learning and new data modalities](events_past.html#federated-learning-and-new-data-modalities).
 * 2023/11/01: Added registration link for [Next Generation BBS Training Day](events_upcoming.html).
@@ -37,7 +38,7 @@ Practice for R Packages](https://kkmann.github.io/workshop-r-swe/).
 * 2022/12/09: Added recording and slide decks of [joint EFSPI & BBS virtual event on "Addressing intercurrent events: Treatment policy and hypothetical strategies (Day 1)"](events_past.html#joint-efspi-bbs-virtual-event---addressing-intercurrent-events-treatment-policy-and-hypothetical-strategies-day-1).
 * 2022/11/25: Moved this page to [quarto](https://quarto.org/) implying a slightly different look.
 * 2022/09/19: Added final version of material of BBS course [Advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact](trainings/20220913/20220913_gsd_adaptive.html).
-* 2022/07/20: Added recording and slide decks of seminar ["On market approval and market access: Breaking the linear thinking or how to innovate in a crowded space?"](events_past.html#15072022:_On_market_approval_and_market_access:_Breaking_the_linear_thinking_or_how_to_innovate_in_a_crowded_space).
+* 2022/07/20: Added recording and slide decks of seminar ["On market approval and market access: Breaking the linear thinking or how to innovate in a crowded space?"](events_past.html#on-market-approval-and-market-access-breaking-the-linear-thinking-or-how-to-innovate-in-a-crowded-space).
 * 2022/07/01: Added recording, slide decks of [seminar on "Registry studies and health technology assessment (HTA)"](events_past.html#23062022:_BBS__EFSPI_Seminar_Registry_studies_and_HTA).
 * 2022/06/15: Added 1st announcement of [seminar on "On market approval and market access: Breaking the linear thinking or how to innovate in a crowded space?"](events_upcoming.html).
 * 2022/05/31: Added recording, slidedeck of [transforming drug development and BBS assembly](events_past.html#24052022:_BBS_Spring_Seminar_Transforming_drug_development_and_Assembly).
