mailing list of the BBS NextGen committee

--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,11 @@ Lilla di Scala, Johnson & Johnson Innovative Medicine, Basel.
 
 # E-mail announcements of events
  
-If you would like to receive e-mail announcements of upcoming events please send an email to [Bibiana Blatna](mailto:bibiana.blatna@novartis.com).
+If you would like to receive e-mail announcements of upcoming events, please send an email to [Bibiana Blatna](mailto:bibiana.blatna@novartis.com).
+
+# Additional e-mailing list of the BBS Next Generation committee
+ 
+If you would like to register for this e-mailing list, please use [this link](https://docs.google.com/forms/d/e/1FAIpQLSfx-0nVHJ6sm9ts-JF46kgV9cnb9i_klk7aD5Tf5lDBRkEEzw/viewform), or send an email to [Kristina Weber](mailto:kristina.weber@roche.com).
 
 # Partner organizations
 
