--- a/updates.qmd
+++ b/updates.qmd
@@ -10,6 +10,7 @@ output:
     toc_float: yes
 ---
 
+* 2024/01/29: Added summary of [expectations for BBS board members](data/BBS_Council_Members_Expectations.pdf).
 * 2024/01/08: Congratulations to Lilla di Scala for being the new BBS president! And we welcome two new board members, Dominic Magirr (Novartis) and Andreas Ziegler (Cardio-CARE, Medizincampus Davos), see [board](board.html).
 * 2023/12/20: Uploaded final announcement for [BBS Training: Causal thinking in clinical trials](events_upcoming.html).
 * 2023/12/07: Uploaded slides for [Next Generation BBS Training Day](trainings_past.html#next-generation-bbs-training-day).
