--- a/updates.qmd
+++ b/updates.qmd
@@ -10,6 +10,7 @@ output:
     toc_float: yes
 ---
 
+* 2024/05/23: Uploaded slides for [Essentials of Medical Data Sharing and Privacy - Maximize the use of data](events_past.html#essentials-of-medical-data-sharing-and-privacy-maximize-the-use-of-data).
 * 2024/04/30: Uploaded final announcement and agenda for hybrid event [Essentials of Medical Data Sharing and Privacy - Maximize the use of data](events_upcoming.html).
 * 2024/04/22: Uploaded first announcement for virtual event [Controlling the chances of false discoveries in exploratory analysis of clinical trials](events_upcoming.html).
 * 2024/04/16: Uploaded slides and recordings for [BBS Seminar: Reproducibility in Biomedical Research](events_past.html#reproducibility-in-biomedical-research).
