--- a/updates.qmd
+++ b/updates.qmd
@@ -10,6 +10,7 @@ output:
     toc_float: yes
 ---
 
+* 2024/10/23: Added recordings and slidedecks for webinar [Patient-Focused Drug Development: The Role of Patient Preference Studies](events_past.html#patient-focused-drug-development-the-role-of-patient-preference-studies).
 * 2024/09/30: Added recordings for [AI in Clinical Research and Drug Development](events_past.html#ai-in-clinical-research-and-drug-development-and-bbs-general-assembly).
 * 2024/09/26: Uploaded slides for [AI in Clinical Research and Drug Development](events_past.html#ai-in-clinical-research-and-drug-development-and-bbs-general-assembly).
 * 2024/09/09: Uploaded final announcement for [AI in Clinical Research and Drug Development and BBS General Assembly](events_upcoming.html).
