* Add BBS NextGen event on Feb 20th, 2025 * Add BBS NextGen activities overview slides and next community lunch

--- a/events_upcoming.qmd
+++ b/events_upcoming.qmd
@@ -35,7 +35,7 @@ if (nrow(upcoming) > 0){
   upcoming$Registration <- ifelse(is.na(select(upcoming, registration)[, 1]), "", 
                                   paste("[Registration](", select(upcoming, registration)[, 1], ")", sep = ""))
   upcoming$Agenda <- paste("[Agenda](upcoming/", rdate, "/agenda.pdf)", sep = "")
-  upcoming[upcoming$date == "03.09.2023", "Agenda"] <- "[Agenda](https://cen2023.github.io/home/)"
+  upcoming[upcoming$date == "20.02.2025", "Registration"] <- "[Registration for mentors](https://docs.google.com/forms/d/e/1FAIpQLSeNESs9AJKrUXmLBv_wiiHKjWJHWEJ2nq89ZiS3SPLfy4JMfw/viewform)<br><br>Registration for mentees to follow"
 
   upcoming[is.na(upcoming)] <- ""
 
