* Add NextGen lunch 2025 and RSVP link

--- a/nextgen.qmd
+++ b/nextgen.qmd
@@ -17,7 +17,7 @@ The BBS NextGen committee
 * coordinates BBS next generation events (typically two each year, see the [upcoming](events_upcoming.html) and [past](events_past.html) events),
 * maintains the [BBS next generation mailing list](index.html#additional-e-mailing-list-of-the-bbs-next-generation-committee) and [LinkedIn page](https://www.linkedin.com/company/bbs-next-generation), as well as
 * organizes monthly community / networking lunches (see the [LinkedIn posts](https://www.linkedin.com/company/bbs-next-generation/posts) for upcoming ones).  
-  The next lunch will be at KLARA (Clarastrasse 13, 4058 Basel) from 12-13 CET on Thursday, December 19<sup>th</sup>.
+  The next lunch will be at KLARA (Clarastrasse 13, 4058 Basel) from 12-13 CET on Friday, January 31<sup>st</sup> - [RSVP here](https://calendarlink.com/event/zoJvV).
 
 For a detailed overview, please see the following slides for the [2024 BBS Next Gen "Today, Tomorrow and the Future"](data/BBS NextGen_Today_Tomorrow_Future_2024.pdf).
 
