--- a/upcoming/20250319/analysis_innovation.Rmd
+++ b/upcoming/20250319/analysis_innovation.Rmd
@@ -71,7 +71,7 @@ text(x = xx, y = t2, label = paste(t2, " (", round(100 * t2 / sum(t2)), "%)", se
 # Registrations of regulatory colleagues
 
 ```{r, echo = FALSE, eval = TRUE, fig.cap = "", fig.align = "center", fig.width = 7, fig.height = 6}
-#dat <- with(filter(reg2, type %in% c("HTA", "Regulator")[2]))
+#dat <- filter(reg2, type %in% c("HTA", "Regulator")[2])
 ```
 
 # Registrations of HTA colleagues
@@ -143,7 +143,12 @@ xx <- barplot(t2, ylab = "number of registrations", main = paste(dim(reg2)[1], "
 #par(srt = 90)
 text(x = xx + 0.2, y = t2 + 2.5, label = paste(t2, " (", round(100 * t2 / sum(t2)), "%)", sep = ""), pos = 3, offset = 2, cex = 0.8, col = 1, srt = 90)
 ```
+# Questions to the panel
 
+```{r, echo = FALSE, results = 'asis', message = FALSE}
+t1 <- select(filter(reg2, is.na(question) == FALSE), first, last, question)
+kable(t1)
+```
 
 
 
