--- a/events_upcoming.qmd
+++ b/events_upcoming.qmd
@@ -36,7 +36,7 @@ if (nrow(upcoming) > 0){
                                   paste("[Registration](", select(upcoming, registration)[, 1], ")", sep = ""))
   ag <- file.exists(paste("upcoming/", rdate, "/agenda.pdf", sep = ""))
   upcoming$Agenda <- ifelse(ag, paste("[Agenda](upcoming/", rdate, "/agenda.pdf)", sep = ""), "")
-  upcoming[upcoming$date == "20.02.2025", "Registration"] <- "[Registration for the event](https://docs.google.com/forms/d/e/1FAIpQLSdBQBsPYqv65htk3XKUYyYzpe8cCOJE12edltFy5m7VmJj6Cw/viewform)<br><br>[Application for mentors](https://docs.google.com/forms/d/e/1FAIpQLSeNESs9AJKrUXmLBv_wiiHKjWJHWEJ2nq89ZiS3SPLfy4JMfw/viewform)<br><br>Application for mentees to open during the event"
+  upcoming[upcoming$date == "20.02.2025", "Registration"] <- "[Registration for the event](https://docs.google.com/forms/d/e/1FAIpQLSdBQBsPYqv65htk3XKUYyYzpe8cCOJE12edltFy5m7VmJj6Cw/viewform)<br><br>[Application for mentors](https://docs.google.com/forms/d/e/1FAIpQLSeNESs9AJKrUXmLBv_wiiHKjWJHWEJ2nq89ZiS3SPLfy4JMfw/viewform)<br><br>[Application for mentees](https://docs.google.com/forms/d/e/1FAIpQLSeURnmnkwiuZkw0v45tBPdHQ1ameYc1xLx7de2zHOsdErplHg/viewform) (will open after the event)"
 
   upcoming[is.na(upcoming)] <- ""
 
