--- a/nextgen.qmd
+++ b/nextgen.qmd
@@ -9,7 +9,20 @@ output:
     toc_depth: 2
     toc_float: yes
 ---
+```{r setup, include = FALSE, echo = FALSE}
+## load packages
+packs.html <- c("knitr", "pander", "dplyr", "readxl")
+for (i in 1:length(packs.html)){library(packs.html[i], character.only = TRUE)}
 
+knitr::opts_chunk$set(echo = TRUE)
+
+## upcoming   
+path <- getwd()
+upcoming <- as.data.frame(read_excel(paste(path, "/data/upcoming.xlsx", sep = ""), col_types = NULL))
+
+lunch <- upcoming |> filter(tolower(event) == "bbs nextgen lunch")
+has_lunch <- nrow(lunch) > 0
+```
 # Activities
 
 The BBS NextGen committee
@@ -18,19 +31,13 @@ The BBS NextGen committee
 * coordinates the annual BBS next generation mentoring program which kicked off in February 2025 (see [the slide deck on the BBS next generation mentoring program](data/BBS NextGen_Mentoring_Program.pdf) for more detail),
 * maintains the [BBS next generation mailing list](index.html#additional-e-mailing-list-of-the-bbs-next-generation-committee) and [LinkedIn page](https://www.linkedin.com/company/bbs-next-generation), as well as
 * organizes monthly community / networking lunches (see the [LinkedIn posts](https://www.linkedin.com/company/bbs-next-generation/posts) for upcoming ones).  
-  The next lunch will be at KLARA (Clarastrasse 13, 4058 Basel) from 12-13 CET on Friday, March 28<sup>th</sup> - [RSVP here](https://calendarlink.com/event/8NxmZ).
+  `{r} I(ifelse(has_lunch, paste0("The next lunch will be at KLARA (Clarastrasse 13, 4058 Basel) from 12-13 CET on ", lunch$date, " - [RSVP here](", lunch$registration, ")."), ""))`
 
 For a detailed overview, please see the following slides for the [2024 BBS Next Gen "Today, Tomorrow and the Future"](data/BBS NextGen_Today_Tomorrow_Future_2024.pdf).
 
 # Committee members
 
-```{r setup, include = FALSE, echo = FALSE}
-## load packages
-packs.html <- c("knitr", "pander", "dplyr", "readxl")
-for (i in 1:length(packs.html)){library(packs.html[i], character.only = TRUE)}
-
-# knitr::opts_chunk$set(echo = TRUE)
-
+```{r nextgen_board, include = FALSE, echo = FALSE}
 ## roster   
 path <- getwd()
 roster <- read_excel("data/roster_nextgen.xlsx", na = character())
