--- a/nextgen.qmd
+++ b/nextgen.qmd
@@ -11,8 +11,10 @@ output:
 ---
 ```{r setup, include = FALSE, echo = FALSE}
 ## load packages
-packs.html <- c("knitr", "pander", "dplyr", "readxl")
-for (i in 1:length(packs.html)){library(packs.html[i], character.only = TRUE)}
+library("knitr")
+library("pander")
+library("dplyr")
+library("readxl")
 
 knitr::opts_chunk$set(echo = TRUE)
 
@@ -31,7 +33,7 @@ The BBS NextGen committee
 * coordinates the annual BBS next generation mentoring program which kicked off in February 2025 (see [the slide deck on the BBS next generation mentoring program](data/BBS NextGen_Mentoring_Program.pdf) for more detail),
 * maintains the [BBS next generation mailing list](index.html#additional-e-mailing-list-of-the-bbs-next-generation-committee) and [LinkedIn page](https://www.linkedin.com/company/bbs-next-generation), as well as
 * organizes monthly community / networking lunches (see the [LinkedIn posts](https://www.linkedin.com/company/bbs-next-generation/posts) for upcoming ones).  
-  `{r} I(ifelse(has_lunch, paste0("The next lunch will be at KLARA (Clarastrasse 13, 4058 Basel) from 12-13 CET on ", lunch$date, " - [RSVP here](", lunch$registration, ")."), ""))`
+  `r I(ifelse(has_lunch, paste0("The next lunch will be at KLARA (Clarastrasse 13, 4058 Basel) from 12-13 CET on ", lunch$date, " - [RSVP here](", lunch$registration, ")."), ""))`
 
 For a detailed overview, please see the following slides for the [2024 BBS Next Gen "Today, Tomorrow and the Future"](data/BBS NextGen_Today_Tomorrow_Future_2024.pdf).
 
