--- a/talks/20250824/analysis_ISCB.Rmd
+++ b/talks/20250824/analysis_ISCB.Rmd
@@ -21,7 +21,7 @@ for (i in 1:length(packs.html)){library(packs.html[i], character.only = TRUE)}
 knitr::opts_chunk$set(echo = TRUE)
 
 # read in data
-reg2 <- as.data.frame(read_excel("reg3.xlsx"), col_types = rep("text", 4))
+reg4 <- as.data.frame(read_excel("reg3.xlsx"), col_types = rep("text", 4))
 
 # function
 prepTable <- function(t2, cut = 10, ord = TRUE){
@@ -37,7 +37,7 @@ prepTable <- function(t2, cut = 10, ord = TRUE){
 }
 
 # categories with frequencies below cut will be lumped together
-cut <- 5
+cut <- 2
 
 now <- as.POSIXlt(Sys.time())
 now <- paste(substr(now, 1, 10), " at ", substr(now, 12, 19), sep = "")
@@ -47,27 +47,27 @@ now <- paste(substr(now, 1, 10), " at ", substr(now, 12, 19), sep = "")
 
 Data as of `r now`.
 
-# Registrations by institution
+<!-- # Registrations by institution -->
 
-```{r, echo = FALSE, fig.cap = "", fig.align = "center", fig.width = 7, fig.height = 10}
-t2 <- with(reg2, table(inst2))
-t2 <- prepTable(t2 = t2, cut = cut)
+<!-- ```{r, echo = FALSE, fig.cap = "", fig.align = "center", fig.width = 7, fig.height = 10} -->
+<!-- t2 <- with(reg4, table(inst2)) -->
+<!-- t2 <- prepTable(t2 = t2, cut = cut) -->
 
-par(las = 2, mar = c(21, 4.5, 3, 1))
-ylim <- c(0, 1.4 * max(t2))
-xx <- barplot(t2, ylab = "number of registrations", main = paste("Total number of registrations: ", dim(reg2)[1], "\n institution", sep = ""), col = 4, ylim = ylim)
-text(x = xx, y = t2, label = paste(t2, " (", round(100 * t2 / sum(t2)), "%)", sep = ""), pos = 3, offset = 2, cex = 0.8, col = 1, srt = 90)
-```
+<!-- par(las = 2, mar = c(21, 4.5, 3, 1)) -->
+<!-- ylim <- c(0, 1.4 * max(t2)) -->
+<!-- xx <- barplot(t2, ylab = "number of registrations", main = paste("Total number of registrations: ", dim(reg4)[1], "\n institution", sep = ""), col = 4, ylim = ylim) -->
+<!-- text(x = xx, y = t2, label = paste(t2, " (", round(100 * t2 / sum(t2)), "%)", sep = ""), pos = 3, offset = 2, cex = 0.8, col = 1, srt = 90) -->
+<!-- ``` -->
  
 # Registrations by countries
 
 ```{r, echo = FALSE, fig.cap = "", fig.align = "center", fig.width = 7, fig.height = 10}
-t2 <- with(reg2, table(country2))
+t2 <- with(reg4, table(country2))
 t2 <- prepTable(t2 = t2, cut = cut)
 
 par(las = 2, mar = c(17, 4.5, 3, 1))
 ylim <- c(0, 1.4 * max(t2))
-xx <- barplot(t2, ylab = "number of registrations", main = paste(dim(reg2)[1], " registrations from ", with(reg2, length(unique(country2))), " countries", sep = ""), col = 4, ylim = ylim)
+xx <- barplot(t2, ylab = "number of registrations", main = paste(dim(reg4)[1], " registrations from ", with(reg4, length(unique(country2))), " countries", sep = ""), col = 4, ylim = ylim)
 #par(srt = 90)
 text(x = xx + 0.2, y = t2 + 2.5, label = paste(t2, " (", round(100 * t2 / sum(t2)), "%)", sep = ""), pos = 3, offset = 2, cex = 0.8, col = 1, srt = 90)
 ```
@@ -77,7 +77,7 @@ text(x = xx + 0.2, y = t2 + 2.5, label = paste(t2, " (", round(100 * t2 / sum(t2
 ```{r, echo = FALSE, fig.cap = "", fig.align = "center", fig.width = 15, fig.height = 10}
 world <- ne_countries(scale = "medium", returnclass = "sf")
 
-uc <- unique(reg2$country2)
+uc <- unique(reg4$country2)
 uc <- uc[is.na(uc) == FALSE]
 world$fill <- (world$sovereignt %in% uc) == FALSE
 
@@ -100,7 +100,7 @@ worldpopmap
 # Registrations by geographic region
 
 ```{r, echo = FALSE, fig.cap = "", fig.align = "center", fig.width = 7, fig.height = 10}
-df <- data.frame(country = reg2$country2)
+df <- data.frame(country = reg4$country2)
 df$continent <- countrycode(sourcevar = df[, "country"],
                             origin = "country.name",
                             destination = "continent")
@@ -110,7 +110,7 @@ t2 <- prepTable(t2 = t2, cut = 0)
 
 par(las = 2, mar = c(17, 4.5, 3, 1))
 ylim <- c(0, 1.4 * max(t2))
-xx <- barplot(t2, ylab = "number of registrations", main = paste(dim(reg2)[1], " registrations from ", with(df, length(unique(continent))), " regions", sep = ""), col = 4, ylim = ylim)
+xx <- barplot(t2, ylab = "number of registrations", main = paste(dim(reg4)[1], " registrations from ", with(df, length(unique(continent))), " regions", sep = ""), col = 4, ylim = ylim)
 #par(srt = 90)
 text(x = xx + 0.2, y = t2 + 2.5, label = paste(t2, " (", round(100 * t2 / sum(t2)), "%)", sep = ""), pos = 3, offset = 2, cex = 0.8, col = 1, srt = 90)
 ```
