--- a/updates.qmd
+++ b/updates.qmd
@@ -10,6 +10,7 @@ output:
     toc_float: yes
 ---
 
+* 2025/09/03: Uploaded first announcement for [BBS Training: A critical introduction to causal mediation analysis for biostatistics](events_upcoming.html).
 * 2025/07/16: Uploaded first announcement for [BBS Seminar: Causal mediation analysis in clinical research](events_upcoming.html).
 * 2025/06/25: Opened registration for [BBS NextGen Seminar: Building Bridges: Communication Across Academia, Industry, and Regulators](events_upcoming.html).
 * 2025/06/13: Added June BBS NextGen Lunch.
