Add BBS Suisse Romande page Add upcoming BBS SR training do you speak stat

--- a/index.qmd
+++ b/index.qmd
@@ -24,6 +24,10 @@ If you would like to receive e-mail announcements of upcoming events, please sen
  
 If you would like to register for this e-mailing list, please use [this link](https://docs.google.com/forms/d/e/1FAIpQLSfx-0nVHJ6sm9ts-JF46kgV9cnb9i_klk7aD5Tf5lDBRkEEzw/viewform), or send an email to [Kristina Weber](mailto:kristina.weber@roche.com).
 
+# Additional e-mailing list of the BBS Suisse Romande committee
+ 
+If you would like to register for this e-mailing list, please use [this link](https://forms.gle/QZ9FWEJy53GGw2fg7), or send an email to [Valeria Mazzanti](mailto:valeria.mazzanti@cytel.com).
+
 # Partner organizations
 
 [Basel Epidemiology Seminar](https://baselepiseminar.github.io/home/index.html)
