Update mail and registration link of BBS SR

--- a/index.qmd
+++ b/index.qmd
@@ -26,7 +26,7 @@ If you would like to register for this e-mailing list, please use [this link](ht
 
 # Additional e-mailing list of the BBS Suisse Romande committee
  
-If you would like to register for this e-mailing list, please use [this link](https://forms.gle/QZ9FWEJy53GGw2fg7), or send an email to [Valeria Mazzanti](mailto:valeria.mazzanti@cytel.com).
+If you would like to register for this e-mailing list, please use [this link](https://forms.gle/H3JNJ1DmigXkwHnZ7), or send us [an email](mailto:bbssuisseromande@gmail.com).
 
 # Partner organizations
 
