replace Bibi's email with Charline's email

--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ Lilla Di Scala, Johnson & Johnson Innovative Medicine, Basel.
 
 # E-mail announcements of events
  
-If you would like to receive e-mail announcements of upcoming events, please send an email to [Bibiana Blatna](mailto:bibiana.blatna@novartis.com).
+If you would like to receive e-mail announcements of upcoming events, please send an email to [Charline Mere](mailto:Charline.Mere@bms.com).
 
 # Additional e-mailing list of the BBS Next Generation committee
  
